--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -70,7 +70,7 @@
         </nav>
 
         <!-- Cabeçalho, introdução -->
-        <header class="masthead" style="background-image: url('/assets/head.png')">
+        <header class="masthead" style="background: image-url('/assets/head.png')">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-md-10 mx-auto">
