--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -49,7 +49,7 @@
         <!-- MENU -->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-                <img src="logoap.png">
+                <img src="/assets/logoap.png">
                 <a class="navbar-brand" href="index.html"> AppPromoter </a>
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"> Menu <i class="fa fa-bars"></i> </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
