--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -88,9 +88,8 @@
             <div class="row">
                 <div role="main" class="col-md-8">
                     <div class="post-preview">
-						<h1>Bem vindo ao Blog da App Promoter. <h1>
-						<br><br>
-                        <h3>   Traremos novidades e insights da área de Mobile Tech e Inovação.   Conheça nossa ferramenta 								de ASO e cresça no ranking orgânico </h3>
+						<p><strong>Bem vindo ao Blog da AppPromoter.</strong><p>
+						<p>Traremos novidades e insights da área de Mobile Tech e Inovação.   Conheça nossa ferramenta 								de ASO e cresça no ranking orgânico </p>
 						<br><br>
 						
 					    <% @articles.each do |article| %>
@@ -108,9 +107,9 @@
                     </div>
                                
                     <!-- Pager -->
-                    <div class="clearfix">
+                    <!-- <div class="clearfix">
                         <a class="btn btn-secondary float-right" href="#">Posts antigos &rarr;</a>
-                    </div>
+                    </div> -->
                 </div>
                 <aside role="complementary" class="col-md-4">
                     <!-- inscrever -->
