--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -42,6 +42,7 @@
         <!-- Custom styles for this template -->
         <link href="assets/css/clean-blog.min.css" rel="stylesheet">
 
+		
         <title> AppPromoter </title>
     </head>
 
@@ -58,7 +59,8 @@
                                 <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="sobre.html">Sobre</a>
+								<%= link_to 'Sobre', sobre_path, class:'nav-link' %>
+                                <!-- <a class="nav-link" href="sobre.html">Sobre</a> -->
                             </li>
                         </ul>
                         <form class="form-inline">
