--- a/app/views/welcome/sobre.html.erb
+++ b/app/views/welcome/sobre.html.erb
@@ -32,7 +32,9 @@
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+
+								<%= link_to 'Home', :back, class:'nav-link' %>
+								
                             </li>
                             <li class="nav-item">
 
