--- a/app/views/application_mailer/notifier_register.html.erb
+++ b/app/views/application_mailer/notifier_register.html.erb
@@ -6,9 +6,10 @@
   <body>
 	  <p>Olá, </p>
 		  <p>gostaríamos de agradecer o seu apoio e o interesse em nosso eBook "Guia Definitivo para um App de Sucesso"!</p>
+		  <a href="https://www.dropbox.com/s/48gy3yped72gefv/Ebook.pdf?dl=0">Clique no link abaixo para fazer download</a>
 		  <p>Nos acompanhe, sempre sairá novidades :) </p>
 		  <p>Um grande abraço.</p>
 		  <p>Equipe AppPromoters </p>
-		  <p> LINK DO BLOG <p>
+		  <a href="http://appromoter.herokuapp.com/">http://appromoter.herokuapp.com/</a>
   </body>
 </html>
