--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -105,6 +105,10 @@
                     <!-- inscrever -->
                     <div class="col-md-12">
                         <div class="signup-header wow fadeInUp">
+							<% flash.each do |key, value| %>
+							     <div class="alert alert-<%= key %>"><%= value %></div>
+							<% end %>
+							
                             <h3 class="form-title text-center">Quer saber mais? Inscreva-se!</h3>
 							
 							<%= form_with model: @subscriber, url: welcome_index_path, local: true do |form| %>
@@ -121,7 +125,7 @@
 							      </ul>
 							    </div>
 							  <% end %>
- 
+ 							 	
 
                                <div class="form-group">
 									<%= form.text_field :name, class: 'form-control input-lg', placeholder: 'Nome', 										required:true %>
