--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -44,7 +44,8 @@
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Home</a>
+                                
+								<%= link_to 'Home', :back, class:'nav-link' %>
                             </li>
                             <li class="nav-item">
 								<%= link_to 'Sobre', sobre_path, class:'nav-link' %>
@@ -109,7 +110,7 @@
 							     <div class="alert alert-<%= key %>"><%= value %></div>
 							<% end %>
 							
-                            <h3 class="form-title text-center">Quer saber mais? Inscreva-se!</h3>
+                            <h3 class="form-title text-center">Cadastre-se e receba o Guia Definitivo para Um App 								de Sucesso:!</h3>
 							
 							<%= form_with model: @subscriber, url: welcome_index_path, local: true do |form| %>
  
@@ -134,7 +135,7 @@
 							   	 	<%= form.text_field :email, class: 'form-control input-lg', placeholder: 'Email', 										required:true %>
 								</div>
 								<div class="form-group last">
-							    	<%= form.submit 'CADASTRAR', class: 'btn btn-warning btn-block btn-lg' %>
+							    	<%= form.submit 'Receber e-book', class: 'btn btn-warning btn-block btn-lg' %>
 								</div> 
 							<% end %>
 
@@ -149,7 +150,7 @@
                                 <div class="form-group last">
                                     <input type="submit" class="btn btn-warning btn-block btn-lg" value="CADASTRAR">
                                 </div> -->
-                                <p class="privacy text-center">Não iremos compartilhar seu email.</p>
+                                <p class="privacy text-center">Descubra <strong>as 10 melhores práticas para gerar muitos 									downloads.</strong></p>
                                
 
                             </form>
