--- a/app/views/welcome/sobre.html.erb
+++ b/app/views/welcome/sobre.html.erb
@@ -85,7 +85,7 @@
                 <!-- inscrever -->
                 <div class="col-md-12">
                     <div class="signup-header wow fadeInUp">
-                        <h3 class="form-title text-center">Quer saber mais? Inscreva-se!</h3>
+                        <h3 class="form-title text-center">Cadastre-se e receba o Guia Definitivo para Um App 								de Sucesso:!</h3>
 						<%= form_with model: @subscriber, url: welcome_index_path, local: true do |form| %>
 
 						  <% if @subscriber.errors.any? %>
@@ -109,9 +109,10 @@
 						   	 	<%= form.text_field :email, class: 'form-control input-lg', placeholder: 'Email', 										required:true %>
 							</div>
 							<div class="form-group last">
-						    	<%= form.submit 'CADASTRAR', class: 'btn btn-warning btn-block btn-lg' %>
+						    	<%= form.submit 'Receber e-book', class: 'btn btn-warning btn-block btn-lg' %>
 							</div> 
 						<% end %>
+						<p class="privacy text-center">Descubra <strong>as 10 melhores práticas para gerar muitos 									downloads.</strong></p>
                     </div>
                 </div>
             </aside>
